@@ -1945,6 +1945,7 @@ which is @minus{}Inf instead of +Inf.
 
 @deftypefun int mpfr_cbrt (mpfr_t @var{rop}, mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
 @deftypefunx int mpfr_rootn_ui (mpfr_t @var{rop}, mpfr_t @var{op}, unsigned long int @var{n}, mpfr_rnd_t @var{rnd})
+@deftypefunx int mpfr_rootn_si (mpfr_t @var{rop}, mpfr_t @var{op}, long int @var{n}, mpfr_rnd_t @var{rnd})
 Set @var{rop} to the @var{n}th root (with @math{@var{n} = 3}, the cubic root,
 for @code{mpfr_cbrt}) of @var{op} rounded in the direction @var{rnd}.
 For @math{@var{n} = 0}, set @var{rop} to NaN@.
@@ -1955,8 +1956,6 @@ usual limit rules, i.e., the same sign as @var{op} if @var{n} is odd, and
 positive if @var{n} is even.
 
 These functions agree with the rootn operation of the IEEE@tie{}754 standard.
-Note that it is here restricted to @math{@var{n} @ge{} 0}. Functions
-allowing a negative @var{n} may be implemented in the future.
 @end deftypefun
 
 @deftypefun int mpfr_root (mpfr_t @var{rop}, mpfr_t @var{op}, unsigned long int @var{n}, mpfr_rnd_t @var{rnd})
@@ -4334,6 +4333,8 @@ use @code{mpfr_get_z_exp}.
 @item @code{mpfr_rint_roundeven} and @code{mpfr_roundeven} in MPFR@tie{}4.0.
 
 @item @code{mpfr_round_nearest_away} in MPFR@tie{}4.0.
+
+@item @code{mpfr_rootn_si} in MPFR@tie{}4.2.
 
 @item @code{mpfr_rootn_ui} in MPFR@tie{}4.0.
 
